--- a/.github/workflows/CompatHelper.yml
+++ b/.github/workflows/CompatHelper.yml
@@ -1,14 +1,20 @@
 name: CompatHelper
+
 on:
   schedule:
-    - cron: 0 0 * * *
+    - cron: '0 0 * * *'
+  push:
+    branches:
+      - actions/trigger/CompatHelper
+
 jobs:
-  build:
+  CompatHelper:
     runs-on: ubuntu-latest
     steps:
       - name: Pkg.add("CompatHelper")
         run: julia -e 'using Pkg; Pkg.add("CompatHelper")'
       - name: CompatHelper.main()
-        run: julia -e 'using CompatHelper; CompatHelper.main()'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          COMPATHELPER_PRIV: ${{ secrets.SSH_KEY }}
+        run: julia -e 'using CompatHelper; CompatHelper.main()'
