--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "Folds"
 uuid = "41a02a25-b8f0-4f67-bc48-60067656b558"
 authors = ["Takafumi Arakaki <aka.tkf@gmail.com> and contributors"]
-version = "0.1.0"
+version = "0.1.1-DEV"
 
 [deps]
 Transducers = "28d57a85-8fef-5791-bfe6-a80928e7c999"
