--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,7 +21,9 @@ jobs:
         uses: julia-actions/setup-julia@v1
         with:
           version: ${{ matrix.julia-version }}
-      - uses: julia-actions/julia-runtest@latest
+      - run: julia -e 'using Pkg; pkg"add https://github.com/tkf/Run.jl"'
+      - run: julia -e 'using Run; Run.prepare("test/environments/main")'
+      - run: julia -e 'using Run; Run.test(project="test/environments/main")'
       - uses: julia-actions/julia-processcoverage@v1
       - uses: codecov/codecov-action@v1
         with:
