--- a/.mergify.yml
+++ b/.mergify.yml
@@ -9,7 +9,7 @@ pull_request_rules:
       - base=master
       - "#approved-reviews-by>=1"
       - status-success~=Test Julia .*
-      - -status-failure~=Test Julia [0-9].*
+      - -status-failure~=Test Julia \^?[0-9].*
       - status-success=Documenter
       - label=ready-to-merge:squash
       - label!=work-in-progress
@@ -21,7 +21,7 @@ pull_request_rules:
       - base=master
       - "#approved-reviews-by>=1"
       - status-success~=Test Julia .*
-      - -status-failure~=Test Julia [0-9].*
+      - -status-failure~=Test Julia \^?[0-9].*
       - status-success=Documenter
       - label=ready-to-merge:rebase
       - label!=work-in-progress
@@ -33,7 +33,7 @@ pull_request_rules:
       - base=master
       - "#approved-reviews-by>=1"
       - status-success~=Test Julia .*
-      - -status-failure~=Test Julia [0-9].*
+      - -status-failure~=Test Julia \^?[0-9].*
       - status-success=Documenter
       - label=ready-to-merge:merge
       - label!=work-in-progress
@@ -45,7 +45,7 @@ pull_request_rules:
       - author=tkf
       - base=master
       - status-success~=Test Julia .*
-      - -status-failure~=Test Julia [0-9].*
+      - -status-failure~=Test Julia \^?[0-9].*
       - status-success=Documenter
       - label~=ready-to-merge:.*
     actions:
