--- a/Project.toml
+++ b/Project.toml
@@ -1,12 +1,18 @@
 name = "Folds"
 uuid = "41a02a25-b8f0-4f67-bc48-60067656b558"
 authors = ["Takafumi Arakaki <aka.tkf@gmail.com> and contributors"]
-version = "0.1.1-DEV"
+version = "0.2.0-DEV"
 
 [deps]
+BangBang = "198e06fe-97b7-11e9-32a5-e1d131e6ad66"
+DefineSingletons = "244e2a9f-e319-4986-a169-4d1fe445cd52"
+Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
+InitialValues = "22cec73e-a1b8-11e9-2c92-598750a2cf9c"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 Transducers = "28d57a85-8fef-5791-bfe6-a80928e7c999"
 
 [compat]
+DefineSingletons = "0.1.1"
 Transducers = "0.4.35"
 julia = "1"
 
