--- a/test/environments/main/Project.toml
+++ b/test/environments/main/Project.toml
@@ -1,9 +1,11 @@
 [deps]
 Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
 BangBang = "198e06fe-97b7-11e9-32a5-e1d131e6ad66"
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 Folds = "41a02a25-b8f0-4f67-bc48-60067656b558"
 InitialValues = "22cec73e-a1b8-11e9-2c92-598750a2cf9c"
+StructArrays = "09ab397b-f2b6-538f-b94a-2f83cf4a842a"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 Transducers = "28d57a85-8fef-5791-bfe6-a80928e7c999"
 
