--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -15,13 +15,21 @@ jobs:
       - uses: actions/checkout@v2
       - uses: julia-actions/setup-julia@latest
         with:
-          version: 1.4
-      - run: julia --project=docs -e '
-          using Pkg;
-          Pkg.develop(PackageSpec(; path=pwd()));
-          Pkg.instantiate();'
+          version: 1.5
+      - name: Install Run.jl
+        run: julia -e 'using Pkg; pkg"add Run@0.1"'
+      - name: Install dependencies
+        run: julia -e 'using Run; Run.prepare_docs()'
       - name: Build and deploy
+        if: |
+          github.event_name == 'push' || (
+            github.event_name == 'pull_request' &&
+            !contains(github.head_ref, 'create-pull-request/')
+          )
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           DOCUMENTER_KEY: ${{ secrets.SSH_KEY }}
-        run: julia --project=docs docs/make.jl
+        run: julia -e 'using Run; Run.docs()'
+      - name: Just build
+        if: contains(github.head_ref, 'create-pull-request/')
+        run: julia -e 'using Run; Run.docs()'
