--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -1,2 +1,5 @@
 [deps]
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
+Folds = "41a02a25-b8f0-4f67-bc48-60067656b558"
+StructArrays = "09ab397b-f2b6-538f-b94a-2f83cf4a842a"
+Transducers = "28d57a85-8fef-5791-bfe6-a80928e7c999"
