--- a/Project.toml
+++ b/Project.toml
@@ -14,7 +14,11 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 Transducers = "28d57a85-8fef-5791-bfe6-a80928e7c999"
 
 [compat]
+Accessors = "0.1.1"
+BangBang = "0.3.30"
 DefineSingletons = "0.1.1"
+InitialValues = "0.2.10"
+MicroCollections = "0.1.0"
 Transducers = "0.4.35"
 julia = "1.4"
 
