--- a/Project.toml
+++ b/Project.toml
@@ -6,20 +6,24 @@ version = "0.2.2-DEV"
 [deps]
 Accessors = "7d9f7c33-5ae7-4f3b-8dc6-eff91059b697"
 BangBang = "198e06fe-97b7-11e9-32a5-e1d131e6ad66"
+Baselet = "9718e550-a3fa-408a-8086-8db961cd8217"
 DefineSingletons = "244e2a9f-e319-4986-a169-4d1fe445cd52"
 Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
 InitialValues = "22cec73e-a1b8-11e9-2c92-598750a2cf9c"
 MicroCollections = "128add7d-3638-4c79-886c-908ea0c25c34"
+Referenceables = "42d2dcc6-99eb-4e98-b66c-637b7d73030e"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 Transducers = "28d57a85-8fef-5791-bfe6-a80928e7c999"
 
 [compat]
 Accessors = "0.1.1"
 BangBang = "0.3.30"
+Baselet = "0.1"
 DefineSingletons = "0.1.1"
 InitialValues = "0.2.10"
 MicroCollections = "0.1.0"
 Transducers = "0.4.35"
+Referenceables = "0.1.1"
 julia = "1.4"
 
 [extras]
