--- a/test/environments/main/Project.toml
+++ b/test/environments/main/Project.toml
@@ -8,6 +8,7 @@ Folds = "41a02a25-b8f0-4f67-bc48-60067656b558"
 InitialValues = "22cec73e-a1b8-11e9-2c92-598750a2cf9c"
 LoadAllPackages = "b37bcd2d-1570-475d-a8c6-9b4fae6d0ba9"
 PerformanceTestTools = "dc46b164-d16f-48ec-a853-60448fc869fe"
+Referenceables = "42d2dcc6-99eb-4e98-b66c-637b7d73030e"
 StructArrays = "09ab397b-f2b6-538f-b94a-2f83cf4a842a"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 Transducers = "28d57a85-8fef-5791-bfe6-a80928e7c999"
