--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "Folds"
 uuid = "41a02a25-b8f0-4f67-bc48-60067656b558"
 authors = ["Takafumi Arakaki <aka.tkf@gmail.com> and contributors"]
-version = "0.2.4"
+version = "0.2.5-DEV"
 
 [deps]
 Accessors = "7d9f7c33-5ae7-4f3b-8dc6-eff91059b697"
