--- a/test/Project.toml
+++ b/test/Project.toml
@@ -7,6 +7,7 @@ Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 Folds = "41a02a25-b8f0-4f67-bc48-60067656b558"
 InitialValues = "22cec73e-a1b8-11e9-2c92-598750a2cf9c"
 LoadAllPackages = "b37bcd2d-1570-475d-a8c6-9b4fae6d0ba9"
+OnlineStats = "a15396b6-48d5-5d58-9928-6d29437db91e"
 PerformanceTestTools = "dc46b164-d16f-48ec-a853-60448fc869fe"
 Referenceables = "42d2dcc6-99eb-4e98-b66c-637b7d73030e"
 StructArrays = "09ab397b-f2b6-538f-b94a-2f83cf4a842a"
