--- a/Project.toml
+++ b/Project.toml
@@ -12,6 +12,7 @@ Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
 InitialValues = "22cec73e-a1b8-11e9-2c92-598750a2cf9c"
 MicroCollections = "128add7d-3638-4c79-886c-908ea0c25c34"
 Referenceables = "42d2dcc6-99eb-4e98-b66c-637b7d73030e"
+Requires = "ae029012-a4dd-5104-9daa-d747884805df"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 Transducers = "28d57a85-8fef-5791-bfe6-a80928e7c999"
 
