--- a/Project.toml
+++ b/Project.toml
@@ -24,6 +24,7 @@ DefineSingletons = "0.1.1"
 InitialValues = "0.2.10"
 MicroCollections = "0.1.0"
 Referenceables = "0.1.2"
+Requires = "0.5, 1.0"
 Transducers = "0.4.35"
 julia = "1.4"
 
