--- a/Project.toml
+++ b/Project.toml
@@ -21,7 +21,7 @@ Accessors = "0.1.1"
 BangBang = "0.3.30"
 Baselet = "0.1"
 DefineSingletons = "0.1.1"
-InitialValues = "0.2.10"
+InitialValues = "0.2.10, 0.3"
 MicroCollections = "0.1.0"
 Referenceables = "0.1.2"
 Requires = "0.5, 1.0"
