--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,3 +35,14 @@ jobs:
           file: ./lcov.info
           flags: unittests
           name: codecov-umbrella
+
+  # A job that succeeds if and only if all jobs in `test` succeed.
+  all-success:
+    if: always() && github.event.pull_request
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+      # https://github.com/tkf/merge-conclusions-action
+      - uses: tkf/merge-conclusions-action@v1
+        with:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
