Set compat for ExternalDocstrings

--- a/Project.toml
+++ b/Project.toml
@@ -23,6 +23,7 @@ Accessors = "0.1.1"
 BangBang = "0.3.30"
 Baselet = "0.1"
 DefineSingletons = "0.1.1"
+ExternalDocstrings = "0.1"
 InitialValues = "0.2.10, 0.3"
 MicroCollections = "0.1.0"
 Referenceables = "0.1.2"
