--- a/Project.toml
+++ b/Project.toml
@@ -9,6 +9,7 @@ BangBang = "198e06fe-97b7-11e9-32a5-e1d131e6ad66"
 Baselet = "9718e550-a3fa-408a-8086-8db961cd8217"
 DefineSingletons = "244e2a9f-e319-4986-a169-4d1fe445cd52"
 Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
+ExternalDocstrings = "e189563c-0753-4f5e-ad5c-be4293c83fb4"
 InitialValues = "22cec73e-a1b8-11e9-2c92-598750a2cf9c"
 MicroCollections = "128add7d-3638-4c79-886c-908ea0c25c34"
 Referenceables = "42d2dcc6-99eb-4e98-b66c-637b7d73030e"
@@ -22,6 +23,7 @@ Accessors = "0.1.1"
 BangBang = "0.3.30"
 Baselet = "0.1"
 DefineSingletons = "0.1.1"
+ExternalDocstrings = "0.1"
 InitialValues = "0.2.10, 0.3"
 MicroCollections = "0.1.0"
 Referenceables = "0.1.2"
